[package]
name = "gameboy"
version = "0.1.0"
authors = ["Christopher Butcher <cbutcher@gmail.com>"]

[dependencies]
time = "0.1.36"
log = "0.3.6"
env_logger = "0.3"
clap = "2"

[dependencies.sdl2]
version = "0.31.0"
default-features = false
features = ["image"]

# TODO for profiling
# [profile.release]
# debug = true
