[package]
name = "gameboy"
version = "0.1.0"
authors = ["Christopher Butcher <cbutcher@gmail.com>"]

[dependencies]
time = "0.3.9"
log = "0.4.17"
env_logger = "0.9.0"
clap = { version = "3.1.18", features = ["derive"] }

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["image"]
